# matonb-unifi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/matonb_unifi/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py
